# yummydoors_backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  YUMMYDOORS_TECH_SUMMARY.md  alembic.ini  approve_app.py  deploy-cloud-run.sh  docker-compose.prod.yml  docker-compose.yml  er_diagram.mermaid  gantt.mermaid  generate_er.py  pyproject.toml  reset_app.py  seed.py  start.sh  test_add_favorite.py  test_asgi.py  test_cloudinary.py  test_cors.py  test_cors3.py  test_cors_server.py  test_cors_server2.py  test_endpoint.py  test_lazy_load.py  test_logic.py  test_prod_cors.py  test_prod_fav.py  test_req.py  test_serialize.py  test_token.py  update_coords.py  vps-docker-compose.yml  yummydoors-app.yaml
app/: celery_app.py  main.py
docs/: DEPLOYMENT_SETUP.md  VPS_PRODUCTION_DEPLOYMENT.md  YUMMYDOORS_BACKEND_API_REFERENCE.md  YUMMYDOORS_BACKEND_GAPS_FROM_FLUTTER.md  YUMMYDOORS_CONVERSATION_ANALYSIS.md  YUMMYDOORS_DESKTOP_NEXT_STEPS.md  YUMMYDOORS_ECOSYSTEM_CURRENT_STATE.md  YUMMYDOORS_FLUTTER_PARITY_TODO.md  YUMMYDOORS_FRONTEND_CONTRACT_FROM_MOBILE.md  YUMMYDOORS_HOME_ARCHITECTURE_FROM_FLUTTER.md  YUMMYDOORS_MULTI_MODE_ACCOUNT_IMPLEMENTATION.md  YUMMYDOORS_PRODUCT_AUDIT_2026-07-04.md  YUMMYDOORS_RESERVATIONS_BACKEND_PLAN.md  YUMMYDOORS_RESERVATION_PARITY.md  YUMMYDOORS_SYSTEM_BLUEPRINT.md  YUMMYDOORS_SYSTEM_STATUS_2026-07-14.md  YUMMYDOORS_SYSTEM_VISUALIZATION.md
migrations/: env.py
scripts/: check-merchant-order-status-update-path.mjs  deploy.sh  entrypoint.sh
tests/: conftest.py  test_analytics_service.py  (+11 more)
(+150 files in other folders)
