[project]
name = "yummydoors-backend"
version = "0.1.0"
description = "YummyDoors backend in FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "bcrypt<5",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "google-auth>=2.40.3",
  "gunicorn>=22.0.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.10.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.42",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.3",
]

[project.scripts]
yummydoors-create-superuser = "app.cli.create_superuser:main"
yummydoors-seed-homepage = "app.cli.seed_homepage_data:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
